# financial_organization

./: README.md  docker-compose.yaml
server/: Dockerfile  docker-entrypoint.sh  pyproject.toml
server/apps/: urls.py
server/apps/organizations/: models.py  serializers.py
server/apps/organizations/migrations/: 0001_initial.py
server/config/: asgi.py  celery_app.py  settings.py  wsgi.py
